# jiu

./: .jiu.toml  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
demo/: demo.cwrt
scripts/: dummy.sh  version.sh
src/: arguments.rs  cli.rs  lib.rs  main.rs
tests/: integration_test.rs
