[package]
name = "jiu"
version = "0.1.2"
edition = "2024"
readme = "README.md"
description = "A minimal command runner."
keywords = ["command-line", "cli", "runner", "development", "utility"]
categories = ["command-line-utilities", "development-tools"]
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/jiu"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]
anyhow = "1.0.98"
owo-colors = "4.2.0"
serde = { version = "1.0.219", features = ["derive"] }
supports-color = { version = "3.0.2", optional = true }
toml = { version = "0.8.20", default-features = false, features = ["parse"], optional = true }

[[bin]]
name = "jiu"
required-features = ["cli"]

[features]
cli = ["supports-color", "toml"]

[dev-dependencies]
toml = { version = "0.8.20", default-features = false, features = ["parse"] }

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install"]

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
